# Ayaka

./: .gitignore  404.html  Cargo.toml  LICENSE  Makefile  README.md  README_zh-Hans.md  azure-pipelines.yml  clippy.toml  flake.nix  index.html  intro.html  platforms.html  print.html  quick_start.html  rust-toolchain.toml  sample.yaml  searchindex.js  searchindex.json
bins/: Cargo.toml  Makefile
bins/ayaka-check/: Cargo.toml
bins/ayaka-check/src/: main.rs
bins/ayaka-gui/: .gitignore  Makefile  index.html  package-lock.json  package.json  vite.config.ts
bins/ayaka-gui/public/: live2dcubismcore.min.js
bins/ayaka-gui/src/: App.vue  main.ts
bins/ayaka-gui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
bins/ayaka-gui/src-tauri/capabilities/: default.json
bins/ayaka-gui/src-tauri/icons/: icon.icns
bins/ayaka-gui/src-tauri/src/: asset_resolver.rs  dir_resolver.rs  lib.rs  main.rs  mobile.rs  settings.rs
bins/ayaka-gui/src/components/: ActionCard.vue  IconButton.vue  Live2D.vue
bins/ayaka-gui/src/interop/: index.ts
bins/ayaka-gui/src/locale/: en.json  index.ts  ja.json  schema.json  zh_Hans.json
bins/ayaka-gui/src/views/: AboutView.vue  GameView.vue  HistoryView.vue  HomeView.vue  RecordsView.vue  SettingsView.vue  StartView.vue
bins/ayaka-latex/: Cargo.toml
bins/ayaka-latex/src/: main.rs  writer.rs
bins/file-picker-ios/: Cargo.toml  build.rs
bins/file-picker-ios/native/: picker.m
bins/file-picker-ios/src/: lib.rs
bins/gal/: Cargo.toml
bins/gal-gui/: Makefile  index.html  package.json  vite.config.ts
bins/gal-gui/src/: App.vue  env.d.ts  main.ts
bins/gal-gui/src-tauri/: Cargo.toml  tauri.conf.json
bins/gal-gui/src-tauri/icons/: icon.icns
bins/gal-latex/: Cargo.toml
bins/gal-latex/src/: main.rs  writer.rs
bins/gal/src/: main.rs
gal-bindings/: Cargo.toml  export.wit
gal-bindings/src/: export.rs  lib.rs
gal-gui/src-tauri/: Cargo.toml  tauri.conf.json
gal-gui/src-tauri/src/: main.rs
gal-locale/: Cargo.toml
gal-locale/src/: lib.rs
gal-locale/src/icu/: env.rs  icu4c.rs  mod.rs  windows.rs
gal-locale/src/info/: env.rs  mod.rs  windows.rs
gal-plugin/: Cargo.toml
gal-plugin/src/: .gitignore  bindings.rs  lib.rs
gal-runtime/: Cargo.toml
gal-runtime/src/: config.rs  context.rs  lib.rs  plugin.rs  progress_future.rs  runner.rs  script.rs  settings.rs
gal-settings/: Cargo.toml
gal-settings/src/: lib.rs
plugins/: Cargo.toml  Makefile
plugins/ayacript/: Cargo.toml
plugins/ayacript/src/: lib.rs  plugin.rs  script.rs
plugins/ayalog/: Cargo.toml
plugins/ayalog/src/: lib.rs
plugins/basictex/: Cargo.toml
plugins/basictex/src/: lib.rs
plugins/format/: Cargo.toml
plugins/format/src/: lib.rs
plugins/gal-bindings/: Cargo.toml
plugins/gal-bindings-impl/: Cargo.toml
plugins/galog/: Cargo.toml
plugins/galog/src/: lib.rs
plugins/live2d/: Cargo.toml
plugins/live2d/src/: lib.rs
plugins/markdown/: Cargo.toml
plugins/markdown/src/: lib.rs
plugins/media/: Cargo.toml
plugins/media/src/: lib.rs
plugins/random/: Cargo.toml
plugins/random/src/: lib.rs
plugins/slog/: Cargo.toml
plugins/slog/src/: lib.rs
utils/: Cargo.toml  Makefile
utils/ayaka-bindings/: Cargo.toml
utils/ayaka-bindings-impl/: Cargo.toml
utils/ayaka-bindings-impl/src/: lib.rs
utils/ayaka-bindings-types/: Cargo.toml
utils/ayaka-bindings-types/src/: config.rs  fs.rs  lib.rs  logger.rs  plugin.rs  runtime.rs  script.rs
utils/ayaka-bindings/src/: fs.rs  lib.rs  logger.rs  plugin.rs
utils/ayaka-model/: Cargo.toml
utils/ayaka-model/src/: lib.rs  settings.rs  view_model.rs
utils/ayaka-model/tests/: basic_model.rs  basic_runtime.rs  fibonacci  fibonacci.rs
utils/ayaka-plugin/: Cargo.toml
utils/ayaka-plugin-nop/: Cargo.toml
utils/ayaka-plugin-nop/src/: lib.rs
utils/ayaka-plugin-wasmer/: Cargo.toml
utils/ayaka-plugin-wasmer/src/: lib.rs
utils/ayaka-plugin-wasmi/: Cargo.toml
utils/ayaka-plugin-wasmi/src/: lib.rs
utils/ayaka-plugin-wasmtime/: Cargo.toml
utils/ayaka-plugin-wasmtime/src/: lib.rs
utils/ayaka-plugin/src/: lib.rs
utils/ayaka-primitive/: Cargo.toml
utils/ayaka-primitive/src/: lib.rs  line.rs  raw_value.rs  text.rs
utils/ayaka-runtime/: Cargo.toml
utils/ayaka-runtime/src/: config.rs  context.rs  lib.rs  locale.rs  pack.rs  plugin.rs  script.rs  settings.rs  view_model.rs
utils/ayaka-runtime/tests/: runtime.rs
utils/ayaka-script/: Cargo.toml  build.rs
utils/ayaka-script-types/: Cargo.toml
utils/ayaka-script-types/src/: exec.rs  lib.rs  primitive.rs  text.rs
utils/ayaka-script/src/: grammer.lalrpop  lib.rs  line.rs  parser.rs  primitive.rs  text.rs  tryext.rs
utils/fallback/: Cargo.toml
utils/fallback-derive/: Cargo.toml
utils/fallback-derive/src/: lib.rs
utils/fallback/src/: lib.rs
utils/fallback/tests/: derive.rs
utils/gal-bindings/: Cargo.toml
utils/gal-bindings-impl/: Cargo.toml
utils/gal-bindings-impl/src/: lib.rs
utils/gal-bindings-types/: Cargo.toml
utils/gal-bindings-types/src/: lib.rs
utils/gal-bindings/src/: fs.rs  lib.rs  logger.rs
utils/gal-fallback/: Cargo.toml
utils/gal-fallback-derive/: Cargo.toml
utils/gal-fallback-derive/src/: lib.rs
utils/gal-fallback/src/: lib.rs
utils/gal-locale/: Cargo.toml
utils/gal-locale/src/: lib.rs  matcher.rs
utils/gal-primitive/: Cargo.toml
utils/gal-primitive/src/: lib.rs
utils/gal-runtime/: Cargo.toml
utils/gal-runtime/src/: config.rs  context.rs  lib.rs  plugin.rs  progress_future.rs  script.rs  settings.rs
utils/gal-script/: Cargo.toml
utils/gal-script/src/: lib.rs  text.rs
utils/locale/: Cargo.toml
utils/locale/src/: lib.rs  matcher.rs
utils/progress-future/: Cargo.toml
utils/progress-future-impl/: Cargo.toml
utils/progress-future-impl/src/: lib.rs
utils/progress-future/src/: lib.rs
utils/progress-future/tests/: basic.rs  lifetime.rs  nested.rs
utils/stream-future/: Cargo.toml
utils/stream-future-impl/: Cargo.toml
utils/stream-future-impl/src/: lib.rs
utils/stream-future/src/: lib.rs
utils/stream-future/tests/: basic.rs  lifetime.rs  nested.rs
(+531 files in other folders)
