[workspace]
members = [
    "gal-locale",
    "gal-primitive",
    "gal-runtime",
    "gal-script",
    "gal",
    "gal-gui/src-tauri",
    "gal-bindings-types",
    "gal-bindings-impl",
    "gal-bindings",
    "plugins/format",
    "plugins/random",
]

resolver = "2"

[profile.release]
lto = true
codegen-units = 1
