[workspace]
members = [
    "gal-locale",
    "gal-primitive",
    "gal-fallback-derive",
    "gal-fallback",
    "gal-runtime",
    "gal-script",
    "gal",
    "gal-gui/src-tauri",
    "gal-latex",
    "gal-bindings-types",
    "gal-bindings-impl",
    "gal-bindings",
    "plugins/format",
    "plugins/slog",
    "plugins/random",
    "plugins/markdown",
]

resolver = "2"

[profile.release]
lto = true
codegen-units = 1
