[workspace]
members = [
    "ayaka-check",
    "ayaka-gui/src-tauri",
    "ayaka-latex",
]

resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[workspace.dependencies]
ayaka-runtime = { path = "../utils/ayaka-runtime" }
tokio = { version = "1" }
clap = { version = "4.0" }
flexi_logger = { version = "0.24", default-features = false, features = ["colors"] }
