[workspace]
members = ["ayaka-check", "ayaka-gui/src-tauri", "ayaka-latex"]
exclude = ["file-picked-ios"]

resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
categories = ["game-development"]
keywords = ["game", "engine", "galgame"]
license = "MIT"
repository = "https://github.com/Uni-Gal/Ayaka"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[workspace.dependencies]
ayaka-runtime = { path = "../utils/ayaka-runtime" }
ayaka-model = { path = "../utils/ayaka-model" }
tokio = { version = "1" }
clap = { version = "4" }
flexi_logger = { version = "0.25", default-features = false, features = [
    "colors",
] }
