[package]
name = "gal-locale"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0"
serde = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.36", features = [
    "Win32_Globalization",
] }

[target.'cfg(not(windows))'.dependencies]
rust_icu_sys = { version = "2.0", default-features = false, features = ["use-bindgen", "icu_config"] }
paste = "1.0"
