[package]
name = "gal-locale"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0"
serde = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.36", features = [
    "Win32_Globalization",
] }

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
rust_icu_sys = "2.0"
paste = "1.0"
