[package]
name = "gal-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
gal-script = { path = "../gal-script" }
gal-primitive = { path = "../gal-primitive" }
fp-bindgen-support = { version = "1.0", features = ["async", "host"] }
wasmer = { version = "2.2", default-features = false, features = ["universal", "cranelift"] }
