[package]
name = "gal-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
gal-script = { path = "../gal-script" }
gal-locale = { path = "../gal-locale" }
serde = { version = "1.0", features = ["derive"] }
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
unicode-width = "0.1"

[dev-dependencies]
serde_yaml = "0.8"
lazy_static = "1.4"
