[package]
name = "gal-settings"
version = "0.1.0"
edition = "2021"

[dependencies]
gal-primitive = { path = "../gal-primitive" }
gal-locale = { path = "../gal-locale" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
anyhow = "1.0"
tokio = { version = "1", features = ["fs"] }
