[workspace]
members = [
    "ayacript",
    "ayalog",
    "basictex",
    "live2d",
    "markdown",
    "media",
    "random",
]

resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
categories = ["wasm"]
keywords = ["wasm", "plugin"]
license = "MIT"
repository = "https://github.com/Uni-Gal/Ayaka"

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
ayaka-bindings = { path = "../utils/ayaka-bindings" }
ayaka-bindings-types = { path = "../utils/ayaka-bindings-types" }
ayaka-script = { path = "../utils/ayaka-script" }
ayaka-plugin = { path = "../utils/ayaka-plugin" }

trylog = "0.3"
