[workspace]
members = [
    "ayaka-primitive",
    "ayaka-bindings-types",
    "ayaka-bindings-impl",
    "ayaka-bindings",
    "ayaka-script",
    "ayaka-plugin",
    "ayaka-plugin-nop",
    "ayaka-plugin-wasmer",
    "ayaka-plugin-wasmtime",
    "ayaka-plugin-wasmi",
    "ayaka-runtime",
    "ayaka-model",
]

resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
categories = ["game-engines"]
keywords = ["game", "engine", "galgame"]
license = "MIT"
repository = "https://github.com/Uni-Gal/Ayaka"

[workspace.dependencies]
ayaka-primitive = { path = "ayaka-primitive", version = "0.2.0" }
ayaka-bindings-types = { path = "ayaka-bindings-types", version = "0.2.0" }
ayaka-bindings-impl = { path = "ayaka-bindings-impl", version = "0.2.0" }
ayaka-plugin = { path = "ayaka-plugin", version = "0.2.0" }
ayaka-plugin-nop = { path = "ayaka-plugin-nop", version = "0.2.0" }
ayaka-plugin-wasmer = { path = "ayaka-plugin-wasmer", version = "0.2.0" }
ayaka-plugin-wasmtime = { path = "ayaka-plugin-wasmtime", version = "0.2.0" }
ayaka-plugin-wasmi = { path = "ayaka-plugin-wasmi", version = "0.2.0" }
ayaka-script = { path = "ayaka-script", version = "0.2.0" }
ayaka-runtime = { path = "ayaka-runtime", version = "0.2.0" }

anyhow = "1.0"

fallback = "0.1"

log = "0.4"
trylog = "0.3"

stream-future = "0.3"

rmp-serde = "1.1"
serde = "1.0"
serde_with = "2.2"
serde_yaml = "0.9"

vfs = "0.9"
