[package]
name = "ayaka-check"
description = "CLI frontend for Ayaka."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ayaka-plugin-wasmi = { workspace = true }
ayaka-runtime = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
clap = { workspace = true, features = ["derive"] }
flexi_logger = { workspace = true }
