[package]
name = "ayaka-latex"
description = "LaTeX compiler for Ayaka."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ayaka-runtime = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }
clap = { workspace = true, features = ["derive"] }
flexi_logger = { workspace = true }
