[package]
name = "gal-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
gal-script = { path = "../../gal-script" }
gal-runtime = { path = "../../gal-runtime" }
simple_logger = { version = "2.1", features = ["colors"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["api-all", "cli"] }
tauri-plugin-localhost = "0.1"
portpicker = "0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
