cargo-features = ["per-package-target"]

[package]
name = "ayacript"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
ayaka-bindings = { workspace = true }
ayaka-bindings-types = { workspace = true }
ayaka-script = { workspace = true }
ayaka-plugin = { workspace = true }
trylog = { workspace = true }
