[package]
name = "ayaka-plugin-script"
description = "Plugin for Ayaka. Ayaka script runtime."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ayacript"
crate-type = ["cdylib"]

[dependencies]
ayaka-bindings = { workspace = true }
ayaka-bindings-types = { workspace = true }
ayaka-script = { workspace = true }
ayaka-plugin = { workspace = true }
trylog = { workspace = true }
