[package]
name = "ayaka-plugin-basictex"
description = "Plugin for Ayaka. Basic TeX commands."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "basictex"
crate-type = ["cdylib"]

[dependencies]
ayaka-bindings = { workspace = true }
