[package]
name = "format"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rt-format = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gal-script = { path = "../../gal-script" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gal-bindings = { path = "../../gal-bindings" }
