cargo-features = ["per-package-target"]

[package]
name = "format"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
ayaka-script = { path = "../../utils/ayaka-script", features = ["rt-format"] }
ayaka-bindings = { path = "../../utils/ayaka-bindings" }
rt-format = "0.3"
