[package]
name = "live2d"
description = "Plugin for Ayaka. Live2D resource resolver."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ayaka-bindings = { workspace = true }
