[package]
name = "markdown"
description = "Plugin for Ayaka. Markdown parser."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ayaka-bindings = { workspace = true }
pulldown-cmark = "0.9"
