[package]
name = "ayaka-plugin-markdown"
description = "Plugin for Ayaka. Markdown parser."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "markdown"
crate-type = ["cdylib"]

[dependencies]
ayaka-bindings = { workspace = true }
pulldown-cmark = "0.12"
pulldown-cmark-escape = "0.11"
latex2mathml = "0.2"
