[package]
name = "random"
description = "Plugin for Ayaka. Random number generator."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ayaka-bindings = { workspace = true }
