[package]
name = "ayaka-bindings-types"
version = "0.1.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2021"

[dependencies]
ayaka-primitive = { path = "../ayaka-primitive" }
fallback = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["serde"] }
