[package]
name = "ayaka-bindings-types"
version = "0.1.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2021"

[dependencies]
ayaka-primitive = { workspace = true }
fallback = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true, features = ["serde"] }
