[package]
name = "ayaka-bindings-types"
description = "Types both used in Ayaka runtime and Ayaka plugins."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ayaka-primitive = { workspace = true }
fallback = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true, features = ["serde"] }
vfs = { workspace = true }
