[package]
name = "ayaka-bindings"
version = "0.1.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2021"

[dependencies]
ayaka-primitive = { workspace = true }
ayaka-bindings-types = { workspace = true }
ayaka-bindings-impl = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
log = { workspace = true }
vfs = { workspace = true }
