[package]
name = "ayaka-bindings"
description = "WASM bindings of plugins written for Ayaka."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ayaka-primitive = { workspace = true }
ayaka-bindings-types = { workspace = true }
ayaka-bindings-impl = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
log = { workspace = true }
vfs = { workspace = true }
