[package]
name = "ayaka-model"
version = "0.1.0"
edition = "2021"

[dependencies]
ayaka-runtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
stream-future = { workspace = true }
trylog = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3.3"
serde_json = "1.0"
