[package]
name = "ayaka-model"
description = "Ayaka high-level runtime."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ayaka-runtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
stream-future = { workspace = true }
trylog = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3.4"
serde_json = "1.0"
