[package]
name = "ayaka-plugin-nop"
description = "A dummy plugin runtime for Ayaka."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ayaka-plugin = { workspace = true }
anyhow = { workspace = true }
