[package]
name = "ayaka-plugin-wasmer"
description = "A plugin runtime for Ayaka, based on Wasmer."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ayaka-plugin = { workspace = true }
wasmer = "3"
