[package]
name = "ayaka-plugin-wasmi"
version = "0.1.0"
edition = "2021"

[dependencies]
ayaka-plugin = { path = "../ayaka-plugin" }
wasmi = { git = "https://github.com/Berrysoft/wasmi.git", branch = "patch/wasi" }
wasmi_wasi = { git = "https://github.com/Berrysoft/wasmi.git", branch = "patch/wasi" }
cap-std = "0.26"
scopeguard = "1.1"
