[package]
name = "ayaka-plugin-wasmi"
description = "A plugin runtime for Ayaka, based on Wasmi."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ayaka-plugin = { workspace = true }
wasmi = "0.36"
