[package]
name = "ayaka-plugin-wasmtime"
description = "A plugin runtime for Ayaka, based on Wasmtime."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ayaka-plugin = { workspace = true }
wasmtime = "24"
