[package]
name = "ayaka-plugin"
description = "Plugin runtime interface for Ayaka."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
rmp-serde = { workspace = true }
