[package]
name = "ayaka-primitive"
description = "Primitive types for Ayaka."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
nom = "7"

[dev-dependencies]
serde_yaml = { workspace = true }
