[package]
name = "ayaka-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
ayaka-primitive = { workspace = true }
ayaka-bindings-types = { workspace = true }
ayaka-plugin = { workspace = true }
fallback = { workspace = true }
language-matcher = "0.1"
icu_locid = { version = "1.0.0", features = ["std"] }
sys-locale = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
stream-future = { workspace = true }
futures-util = "0.3"
tryiterator = { workspace = true }
log = { workspace = true }
trylog = { workspace = true }
cfg-if = "1.0"
vfs = { workspace = true }
vfs-tar = "0.2"
rand = "0.8"

ayaka-plugin-nop = { path = "../ayaka-plugin-nop" }
ayaka-plugin-wasmi = { path = "../ayaka-plugin-wasmi", optional = true }
ayaka-plugin-wasmtime = { path = "../ayaka-plugin-wasmtime", optional = true }
ayaka-plugin-wasmer = { path = "../ayaka-plugin-wasmer", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "parking_lot", "rt"] }
generic-tests = "0.1"

[features]
default = ["wasmi"]
wasmi = ["ayaka-plugin-wasmi"]
wasmtime = ["ayaka-plugin-wasmtime"]
wasmer = ["ayaka-plugin-wasmer"]
