[package]
name = "ayaka-runtime"
description = "Ayaka low-level runtime."
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ayaka-primitive = { workspace = true }
ayaka-bindings-types = { workspace = true }
ayaka-plugin = { workspace = true }
ayaka-script = { workspace = true, features = ["parser"] }
fallback = { workspace = true }
language-matcher = "0.1"
icu_locid = { version = "1.1", features = ["std"] }
sys-locale = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
stream-future = { workspace = true }
futures-util = "0.3"
log = { workspace = true }
trylog = { workspace = true }
cfg-if = "1.0"
vfs = { workspace = true }
vfs-tar = { version = "0.4", features = ["mmap"] }
rand = "0.8"
slab = "0.4"

[dev-dependencies]
ayaka-plugin-wasmer = { workspace = true }
ayaka-plugin-wasmtime = { workspace = true }
ayaka-plugin-wasmi = { workspace = true }
tokio = { version = "1", features = ["macros", "parking_lot", "rt"] }
generic-tests = "0.1"
